[tool.poetry]
name = "tonsof"
version = "0.1.0"
description = ""
authors = ["StarrFox <starrfox6312@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
prompt-toolkit = "^3.0.36"
appdirs = "^1.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
